Json completo, modifiche TribeCharacter e event